refactor: remove unused stock service and stream utility code